# docai

./: .env  .gitignore  alembic.ini  dump.txt  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: f1447cf5b24f_initial_migration.py
config/: config.yaml
docs/: system_sequence_diagram.plantuml  system_sequence_diagram.txt  testing_prompt.md
docs/Diagrams/: class_diagram.plantuml  erd_diagram.plantuml  ingestion_sequence_diagram.plantuml  system_sequence_diagram.plantuml
docs/Prompts/: testing_prompt.md
docs/diagrams/: ingestion_sequence_diagram.plantuml
docs/prompts/: prompt.md  reviewing_prompt.md
scripts/: dump_dir.sh  fix_imports.py  hf_downloader.py  pdf_benchmark_conversion.py  quick_ingest.py  refactor_modules.py  rename_shared.py  storage_test.py
scripts/slurm/: run_pdf_conversion_benchmark.sh  run_storage_service.sh  run_storage_test.sh
source/: conf.py  docai.database.rst  docai.database.tests.rst  docai.ingestion.rst  docai.mapping.rst  docai.models.domain.rst  docai.models.dto.rst  docai.models.exceptions.rst  docai.models.orm.rst  docai.models.rst  docai.rst  docai.storage.rst  index.rst  modules.rst
src/docai/api/endpoints/: documents.py  ingestion.py
src/docai/api/models/: schema.py
src/docai/database/: api.py  config.py  database.py  models.py  schemas.py  service.py  session.py  utils.py
src/docai/database/tests/: test_database.py  test_resources.py
src/docai/ingestion/: config.py  convert.py  exceptions.py  factory.py  id_generator.py  ingest.py  ingestion.py  pdf_to_jpg.py  processing.py  schemas.py  workers.py
src/docai/mapping/: base.py  document_mapper.py  domain_dto.py  domain_orm.py  exceptions.py  orm_dto.py  page_mapper.py  query_mapper.py  utils.py
src/docai/mapping/tests/: test_mapping.py
src/docai/models/: document.py  query.py
src/docai/queue/: config.py  exceptions.py  schemas.py  service.py  test_queue.py
src/docai/shared/models/domain/: document.py  page.py  query.py
src/docai/shared/models/dto/: document.py  error.py  meta.py  page.py  query.py
src/docai/shared/models/orm/: association.py  document.py  page.py  query.py
src/docai/shared/utils/: config_utils.py
src/docai/storage/: api.py  client.py  config.py  exceptions.py  schemas.py  service.py  storage.py
src/docai/storage/tests/: test_api.py  test_client.py
src/docai/utils/: logging_utils.py
tests/storage/: conftest.py
tests/storage/integration/: test_api_client_integration.py  test_api_endpoints.py  test_client_integration.py
tests/storage/unit/: test_client.py  test_client_protocol.py  test_config.py  test_exceptions.py  test_schemas.py  test_storage_service.py  test_storage_service_parallel.py
