[project]
name = "docai"
version = "0.1.0"
description = ""
authors = [
    {name = "AHS-uni",email = "abdhatemsh.uni@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "pdf2image (>=1.17.0,<2.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pytest (>=8.3.5,<9.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "sphinx (>=8.2.3,<9.0.0)",
    "sphinx-autodoc-typehints (>=3.2.0,<4.0.0)",
    "sphinx-rtd-theme (>=3.0.2,<4.0.0)",
    "sphinx-copybutton (>=0.5.2,<0.6.0)",
    "myst-parser (>=4.0.1,<5.0.0)",
    "sphinx-tabs (>=3.4.7,<4.0.0)",
    "bowler (>=0.9.0,<0.10.0)"
]

[tool.poetry]
packages = [{include = "docai", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
